# simmer

./: .gitignore  README.md  index.html  package-lock.json  package.json  recipes.md  run-simmer-dev.command  vite.config.ts
src/: App.module.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/db/: 001_schema.sql
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/filters/: FilterPanel.module.css  FilterPanel.tsx
src/components/import/: ImportModal.module.css  ImportModal.tsx
src/components/layout/: Sidebar.module.css  Sidebar.tsx
src/components/planner/: PlannerView.module.css  PlannerView.tsx
src/components/recipes/: CollectionPickModal.module.css  CollectionPickModal.tsx  CookLogModal.module.css  CookLogModal.tsx  LibraryView.module.css  LibraryView.tsx  RecipeCard.module.css  RecipeCard.tsx  RecipeDetail.module.css  RecipeDetail.tsx  RecipeEditModal.module.css  RecipeEditModal.tsx
src/lib/: db.ts  utils.ts
src/store/: index.ts
src/types/: index.ts
